--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -14,7 +14,11 @@
     "@paddle/paddle-node-sdk": "^2.3.2",
     "@radix-ui/react-alert-dialog": "^1.1.5",
     "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.10",
     "@vercel/analytics": "^1.4.1",
@@ -27,6 +31,7 @@
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.3",
     "recharts": "^2.15.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
