--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/bigquery": "^8.1.1",
+    "@google-cloud/compute": "^6.4.0",
+    "@google-cloud/monitoring": "^5.3.1",
     "@next/third-parties": "^15.1.5",
     "@paddle/paddle-js": "^1.3.3",
     "@paddle/paddle-node-sdk": "^2.3.2",
@@ -25,6 +28,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookies-next": "^5.0.2",
+    "google-auth-library": "^10.5.0",
     "lucide-react": "^0.469.0",
     "next": "15.4.7",
     "react": "^19.0.0",
