--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.3",
     "recharts": "^2.15.0",
+    "resend": "^6.5.2",
     "socks": "^2.8.7",
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.6.0",
